--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\C\u00e9sar\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\diego\\AppData\\Roaming\\NetBeans\\21\\build.properties
